--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@zhang_yong/yytool",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "JS常用功能函数",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish":"npm publish --access=public"
   },
   "repository": {
     "type": "git",
