--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zhang_yong/yytool",
+  "name": "@zhang_yong/tool",
   "version": "0.0.7",
   "description": "JS常用功能函数",
   "main": "index.js",
